--- a/header.html
+++ b/header.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="it" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <ul>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <ul>
     <a id="headera" href="./">Home</a>
-    <a id="headera" href="./doctor/">Doctor's Report</a>
-    <a id="headera" href="./genetic_counselor/">Genetic Counselor's Report</a>
-    <a id="headera" href="./parent/">Parent's Report</a>
-    <a id="headera" href="./community/">Community Resources</a>
-    <a id="headera" href="./references/">References</a>
-</ul>
-  </body>
+    <a id="headera" href="./doctor.html/">Doctor's Report</a>
+    <a id="headera" href="./genetic_counselor.html/">Genetic Counselor's Report</a>
+    <a id="headera" href="./parent.html/">Parent's Report</a>
+    <a id="headera" href="./community.html/">Community Resources</a>
+    <a id="headera" href="./references.html/">References</a>
+  </ul>
+</body>
+
 </html>
