--- a/header.html
+++ b/header.html
@@ -9,11 +9,11 @@
 <body>
   <ul>
     <a id="headera" href="./">Home</a>
-    <a id="headera" href="./doctor.html/">Doctor's Report</a>
-    <a id="headera" href="./genetic_counselor.html/">Genetic Counselor's Report</a>
-    <a id="headera" href="./parent.html/">Parent's Report</a>
-    <a id="headera" href="./community.html/">Community Resources</a>
-    <a id="headera" href="./references.html/">References</a>
+    <a id="headera" href="./doctor.html">Doctor's Report</a>
+    <a id="headera" href="./genetic_counselor.html">Genetic Counselor's Report</a>
+    <a id="headera" href="./parent.html">Parent's Report</a>
+    <a id="headera" href="./community.html">Community Resources</a>
+    <a id="headera" href="./references.html">References</a>
   </ul>
 </body>
 
