--- a/doctor.html
+++ b/doctor.html
@@ -20,7 +20,7 @@
     <h1>Doctor's Report</h1>
     <h2>Part 1</h2>
     <br>
-    <p>Fibrodysplasia ossificans progressiva is a genetic condition that slowly undergoes heterotopic ossification,<img id="myImg" src="src/img/toes.PNG"
+    <p>Fibrodysplasia ossificans progressiva is a genetic condition that slowly undergoes heterotopic ossification,<img id="myImg" src="src/img/toes.png"
         alt="Photograph of an infant's feet showing marked shortening, sharpening of both big toes, with hallux valgus deformities" style='float:right;max-width: 250px; height: auto;'> characterized by the severe
       disabling due
       to unusual bone growth. Some alternate symptoms that victims may deal with typically include malformed big toes or intense swelling around the body, however scientists have noted the possibility of a range of other features such as short
