--- a/parent.html
+++ b/parent.html
@@ -25,7 +25,7 @@
       heartbreaking. The child will likely be treated differently as someone with a disability. The majority of her life will be inhibited by a wheelchair making everyday things that we do suddenly difficult or even impossible without assistance. As
       for the cost of medical treatment, it will be a sizable investment to purchase pain medication often to deal with chronic swelling.</p>
     <br>
-    <p><img id='myImg' src="src/img/knitting.PNG" alt="Miriam Rocke, a person diagnosed with FOP, showing how she knits" style='float:left;max-width:200px;height:auto;'>The <a href="https://www.ifopa.org/" target="_blank"><i>International
+    <p><img id='myImg' src="src/img/knitting.png" alt="Miriam Rocke, a person diagnosed with FOP, showing how she knits" style='float:left;max-width:200px;height:auto;'>The <a href="https://www.ifopa.org/" target="_blank"><i>International
           Fibrodysplasia ossificans progressiva Association</i></a> has
       compiled many
       different
