Update genetic text

--- a/genetic_counselor.html
+++ b/genetic_counselor.html
@@ -20,12 +20,7 @@
     <h1>Genetic Counselor's Report</h1>
     <h2>Part 2</h2>
     <br>
-    <p><img id='Img' src="src/img/dna.png" alt="Chart displaying where the mutations that cause FOP typically occur" style='float:left;max-width:450px;height:auto;'>The rarity of this condition makes examination and research into the genetics much
-      harder to pinpoint and study accurately, however the data
-      attained by
-      scientists provides good insight. FOP is typically inherited sporadically by spontaneous mutations. The most common mutation of FOP is c.617G > A which mutates the amino acid arginine to histidine. Despite this, the genetic transmission of FOP
-      is found to be autosomal dominant with no sex-links. Inherited FOP shows variable expression within families. The probability that the child of a parent with FOP will also carry the disease is 50% however unfortunately, most carriers of the
-      disease are unable to birth children so this is mostly hypothetical. </p>
+    <p><img id='Img' src="src/img/dna.png" alt="Chart displaying where the mutations that cause FOP typically occur" style='float:left;max-width:450px;height:auto;'>The rarity of this condition makes examination and research into the genetics much harder to pinpoint and study accurately, however the data attained by scientists provides good insight. FOP is typically inherited sporadically by spontaneous mutations. The most common mutation of FOP is c.617G > A which mutates the amino acid arginine to histidine. It typically occurs in the ACVR1 gene and is found on the 2q23 chromosome. This chromosome encodes for a bone morphogenetic protein called ALK2. The prevalence of this mutation states that the disease is found in only 1 in 2 millions of humans. Despite this, the genetic transmission of FOP is found to be autosomal dominant meaning it isn’t sex-linked. Inherited FOP shows variable expression within families. The probability that the child of a parent with FOP will also carry the disease is 50% however unfortunately, most carriers of the disease are unable to birth children so this is mostly hypothetical.</p>
     <br>
     <p><img id='myImg' src="src/img/pedigree.png" alt="Pedigree displaying the family history of the trait: Fibrodysplasia ossificans progressiva" style='float:right;max-width:300px;height:auto;border-radius:0;'>Displayed here is the pedigree of the
       family. The bottom-most child is the one that has FOP. As we can see, there is no
