Update parent text

--- a/parent.html
+++ b/parent.html
@@ -20,10 +20,7 @@
     <h1>Parent's Report</h1>
     <h2>Part 3</h2>
     <br>
-    <p>Due to the condition, many lifestyle changes must be made to compensate for FOP. For example, mobility would likely lessen by the time the child reaches adulthood so we would need to get the child a wheelchair. The child will likely undergo
-      lots of emotional stress or sadness by the time it becomes immobile. The emotional impact would likely be traumatizing for all of us. To imagine a loved-one going through the distress and watching the struggle of simple tasks is just
-      heartbreaking. The child will likely be treated differently as someone with a disability. The majority of her life will be inhibited by a wheelchair making everyday things that we do suddenly difficult or even impossible without assistance. As
-      for the cost of medical treatment, it will be a sizable investment to purchase pain medication often to deal with chronic swelling.</p>
+    <p>Due to the condition, we would need to make many lifestyle changes to compensate for FOP. For example, mobility would likely lessen by the time our child reaches adulthood so we would need to get the child a wheelchair. Our child will likely undergo lots of emotional stress or sadness by the time she becomes immobile. The emotional impact would likely be traumatizing for all of us. To imagine a loved-one going through the distress and watching the struggle of simple tasks is just heartbreaking. Our child will likely be treated differently as someone with a disability. The majority of her life will be inhibited by a wheelchair making everyday things that we do suddenly difficult or even impossible without assistance. As for the cost of medical treatment, it will be a sizable investment to purchase pain medication often to deal with chronic swelling.</p>
     <br>
     <p><img id='myImg' src="src/img/knitting.png" alt="Miriam Rocke, a person diagnosed with FOP, showing how she knits" style='float:left;max-width:200px;height:auto;'>The <a href="https://www.ifopa.org/" target="_blank"><i>International
           Fibrodysplasia ossificans progressiva Association</i></a> has
